--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/ln-developer/Skillbox-test/issues"
   },
-  "homepage": "https://github.com/ln-developer/Skillbox-test#readme"
+  "homepage": "https://github.com/ln-developer/Skillbox-test#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "pg": "^8.7.1"
+  }
 }
